# currency_exchange_api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 13873a89cbd9_add_table.py  6ae7b347fc8b_create_users.py  92a68bcb8740_added_image_path_to_user.py  9f44e10a3ca6_add_table.py  d87b082dab96_added_field_is_admin.py  efe146196d5e_add_tables.py
app/api/: __init__.py
app/api/admin/: model.py
app/api/auth/: security.py
app/api/endpoints/: currency.py  users.py
app/api/models/: __init__.py  users.py
app/api/schemas/: __init__.py  currency.py  users.py
app/commands/: createsuperuser.py
app/core/: __init__.py  config.py  database.py
app/exceptions/: __init__.py  exceptions.py  handlers.py  models.py
app/services/: __init__.py  httpclientsession.py  redis_tools.py  websocket_manager.py
app/utils/: __init__.py  balances.py  currencies.py  redis_utils.py  send_email.py  users.py
docker/: app.sh
