[tool.poetry]
name = "currency-exchange-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
pydantic-settings = "^2.1.0"
pydantic = {extras = ["email"], version = "^2.6.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
uvicorn = {version = "^0.27.0.post1", extras = ["standart"]}
alembic = "^1.13.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.9"
bcrypt = "^4.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
